--- a/ssmService/pom.xml
+++ b/ssmService/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ssmDao</artifactId>
+    <artifactId>ssmService</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>cn.share2u</groupId>
-            <artifactId>ssmModel</artifactId>
+            <artifactId>ssmDao</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
